tests/kyverno-policies/restrict-host-path/resources.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-skip
  namespace: test
spec: 
  containers:
  - name: nginx
    image: nginx:1.12
  volumes:
    - name: home
      hostPath:
        path: /home/test
        type: Directory
    - name: configmap
      configMap:
        name: config
---
apiVersion: v1
kind: Pod
metadata:
  name: test-pass
  namespace: user-test
spec: 
  containers:
  - name: nginx
    image: nginx:1.12
  volumes:
    - name: configmap
      configMap:
        name: config
    - name: home
      hostPath:
        path: /users/sysp/test
        type: Directory
---
apiVersion: v1
kind: Pod
metadata:
  name: test-no-hostpath-pass
  namespace: user-test
spec: 
  containers:
  - name: nginx
    image: nginx:1.12
  volumes:
    - name: configmap
      configMap:
        name: config
---
apiVersion: v1
kind: Pod
metadata:
  name: test-fail
  namespace: user-test
spec: 
  containers:
  - name: nginx
    image: nginx:1.12
  volumes:
    - name: home
      hostPath:
        path: /etc/test
        type: Directory
    - name: configmap
      configMap:
        name: config
