tests/kyverno-policies/restrict-host-path/kyverno-test.yaml
---
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: restrict-host-path
policies:
  - policy.yaml
resources:
  - resources.yaml
variables: variables.yaml
results:
  - policy: restrict-host-path
    rule: users-host-path
    resources:
      - test/test-skip
    kind: Pod
    result: skip
  - policy: restrict-host-path
    rule: users-host-path
    resources:
      - user-test/test-pass
      - user-test/test-no-hostpath-pass
    kind: Pod
    result: pass
  - policy: restrict-host-path
    rule: users-host-path
    resources:
      - user-test/test-fail
    kind: Pod
    result: fail
  - policy: restrict-host-path
    rule: webservices-host-path
    resources:
      - user-test/test-skip-webservice
    kind: Pod
    result: skip
  - policy: restrict-host-path
    rule: webservices-host-path
    resources:
      - webservice/test-pass-webservice
      - webservice/test-no-hostpath-pass-webservice
    kind: Pod
    result: pass
  - policy: restrict-host-path
    rule: webservices-host-path
    resources:
      - webservice/test-fail-webservice
    kind: Pod
    result: fail
  - policy: restrict-host-path
    rule: webservices-host-path
    resources:
      - webservice/test-webservice-mariadb
    kind: Pod
    result: pass
  - policy: restrict-host-path
    rule: paas-host-path
    resources:
      - user-test/test-skip-paas
    kind: Pod
    result: skip
  - policy: restrict-host-path
    rule: paas-host-path
    resources:
      - paas/test-pass-paas
      - paas/test-no-hostpath-pass-paas
    kind: Pod
    result: pass
  - policy: restrict-host-path
    rule: paas-host-path
    resources:
      - paas/test-fail-paas
    kind: Pod
    result: fail
  - policy: restrict-host-path
    rule: paas-host-path
    resources:
      - paas/test-paas-mariadb
    kind: Pod
    result: pass
